# kagu

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
src/: cli.rs  hook.rs  lib.rs  main.rs  report.rs  scanner.rs  validator.rs
tests/: integration.rs
