[package]
name = "kagu"
version = "0.1.0"
edition = "2021"
description = "Zero-config conventional commit auditor"
license = "MIT"
repository = "https://github.com/iamkorun/kagu"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
